--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,27 +42,29 @@ jobs:
       - run:
           name: Build front-end
           command: |
-            # Your code here
+            cd frontend
+            npm install
+            npm run build
             exit 1
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
 
-  # build-backend:
-  #   docker:
-  #     - image: circleci/node:13.8.0
-  #   steps:
-  #     - checkout
-  #     - restore_cache:
-  #         keys: [backend-build]
-  #     - run:
-  #         name: Back-end build
-  #         command: |
-  #            # Your code here
-  #            exit 1
-  #     - save_cache:
-  #         paths: [backend/node_modules]
-  #         key: backend-build
+  build-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: Back-end build
+          command: |
+             # Your code here
+             exit 1
+      - save_cache:
+          paths: [backend/node_modules]
+          key: backend-build
 
 #   test-frontend:
 #     docker:
@@ -261,10 +263,10 @@ jobs:
 #               # your code here
 #             fi
 workflows:
-  default:
+  default:it
     jobs:
       - build-frontend
-#       - build-backend
+      - build-backend
 #       - test-frontend:
 #           requires: [build-frontend]
 #       - test-backend:
