--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -130,7 +130,7 @@ jobs:
           name: scan Back-end
           command: |
             cd backend
-            npm install npm@latest -g
+            npm install 
             npm audit fix --audit-level=critical 
             npm audit --audit-level=critical
       - save_cache:
