--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,7 +121,7 @@ jobs:
 
   scan-backend:
     docker:
-      - image: cimg/node:18.4.0
+      - image: circleci/node:12.13.0
     steps:
       - checkout
       - restore_cache:
