--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,34 +72,27 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: [frontend-test]
+          keys: [frontend-build]
       - run:
           name: test front-end
           command: |
             cd frontend
             npm install
-            npm run test            
-      - save_cache:
-          paths: [frontend/node_modules]
-          key: frontend-test
+            npm run test
 
-                
   test-backend:
     docker:
       - image: circleci/node:13.8.0
     steps:
       - checkout
       - restore_cache:
-          keys: [backend-test]
+          keys: [backend-build]
       - run:
           name: test Back-end
           command: |
              cd backend
              npm install
              npm run test
-      - save_cache:
-          paths: [backend/node_modules]
-          key: backend-test
 
   scan-frontend:
     docker:
@@ -107,7 +100,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: [frontend-scan]
+          keys: [frontend-build]
       - run:
           name: scan front-end
           command: |
@@ -115,29 +108,44 @@ jobs:
             npm install
             npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical           
-      - save_cache:
-          paths: [frontend/node_modules]
-          key: frontend-scan
+      
+  
 
+  # scan-backend:
+  #   executor: node
+  #   steps:
+  #     - checkout
+  #     - restore_cache:
+  #         keys:
+  #           - backend-build
+  #     - run:
+  #         name: Check Backend against security vulnerabilities
+  #         working_directory: ./backend
+  #         command: |
+  #           npm install
+  #           npm audit fix --audit-level=critical --force
   scan-backend:
     docker:
-      - image: circleci/node:12.13.0
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - restore_cache:
-          keys: [backend-scan]
+          keys: [backend-build]
       - run:
           name: scan Back-end
           command: |
             cd backend
-            npm install 
-            npm i --save-dev standard-version
-            npm install --save-dev webpack@5.73.0
+            npm install
             npm audit fix --audit-level=critical --force
-            npm audit --audit-level=critical
-      - save_cache:
-          paths: [backend/node_modules]
-          key: backend-scan
+            # npm install 
+            # npm i --save-dev standard-version
+            # npm install --save-dev webpack@5.73.0
+            # npm update mkdirp --depth 2
+            # npm update kind-of --depth 10
+            # npm update path-parse --depth 
+            # npm audit fix --audit-level=critical
+            # npm audit fix --audit-level=critical --force
+            # npm audit --audit-level=critical
 #   deploy-infrastructure:
 #     docker:
 #       # Docker image here that supports AWS CLI
