--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -163,9 +163,9 @@ jobs:
             - project/.circleci/ansible/inventory.txt
 
       - destroy-environment:
-          id: << udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7} >>
+          id: 'udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}'
       - destroy-environment:
-          id: << udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} >>
+          id: <<udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}\>>
       # Here's where you will add some code to rollback on failure      
 
 #   configure-infrastructure:
