--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -136,10 +136,9 @@ jobs:
             aws cloudformation deploy \
               --template-file .circleci/files/backend.yml \
               --tags project=udapeople \
-              --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} \
+              --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
-            cat /var/log/cfn-init.log
-            
+            aws cloudformation describe-stack-events --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
               
       - run:
           name: Ensure front-end infrastructure exist
@@ -164,10 +163,10 @@ jobs:
           paths:
             - project/.circleci/ansible/inventory.txt
 
-      - destroy-environment:
-          id: 'udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}'
-      - destroy-environment:
-          id: udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
+      # - destroy-environment:
+      #     id: 'udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}'
+      # - destroy-environment:
+      #     id: udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
       # Here's where you will add some code to rollback on failure      
 
 #   configure-infrastructure:
