--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,12 +133,13 @@ jobs:
       - run:
           name: Ensure back-end infrastructure exists
           command: |
+            echo test
             aws cloudformation deploy \
               --template-file .circleci/files/backend.yml \
               --tags project=udapeople \
               --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
-            aws cloudformation describe-stack-events --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
+            aws cloudformation describe-stack-events --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}"
               
       - run:
           name: Ensure front-end infrastructure exist
@@ -152,7 +153,6 @@ jobs:
       - run:
           name: Add back-end ip to ansible inventory
           command: |
-            
             aws ec2 describe-instances \
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
             --filters "Name=tag:Project,Values=udacity" \
