--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -154,9 +154,10 @@ jobs:
           command: |
             aws ec2 describe-instances \
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
-            --filters "Name=tag:Project,Values=udacity" \
+            --filters "Name=tag:Project,Values=udapeople" \
             --output text >> inventory.txt
             cat inventory.txt
+        
             
       - persist_to_workspace:
           root: ~/
