--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -158,8 +158,7 @@ jobs:
             --output text >> inventory.txt
             cat inventory.txt
             ls -a
-            cat .circleci/ansible/inventory.txt
-            ls -a project/.circleci/ansible
+            cat .circleci/ansible/inventory.tx
             cd 
             ls -a
             ls -a project/.circleci/ansible
