--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -185,6 +185,7 @@ jobs:
       - run:
           name: Configure server
           command: |
+            echo test
             # Your code here
             exit 1
       # Here's where you will add some code to rollback on failure      
