--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -170,7 +170,7 @@ jobs:
 
   configure-infrastructure:
     docker:
-      - image: python:3.9.12-alpine3.15
+      - image: python:3.9-alpine3.16
     steps:
       - checkout
       - add_ssh_keys:
@@ -180,12 +180,14 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update ansible tar
+            pip install --user ansible
+            apk add --update tar
             apk add --update gzip
       - run:
           name: Configure server
           command: |
             echo smada
+            pip list | grep ansible
             cd .circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml
             
