--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -180,6 +180,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
+            python3 -m pip install --user ansible
             pip install --user ansible
             apk add --update tar
             apk add --update gzip
