--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -180,7 +180,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            pip install --user ansible
+            python3 -m pip uninstall --user ansible
             apk add --update tar
             apk add --update gzip
       - run:
