--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -180,9 +180,12 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            python3 -m pip uninstall --user ansible
+            python3 -m pip install --user ansible
             apk add --update tar
             apk add --update gzip
+            cd
+            pwd
+            ls -a
       - run:
           name: Configure server
           command: |
