--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -170,7 +170,7 @@ jobs:
 
   configure-infrastructure:
     docker:
-      - image: python:3.9-alpine3.16
+      - image:  amazon/aws-cli
     steps:
       - checkout
       - add_ssh_keys:
