--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,7 +113,8 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      .circleci/ansible/inventory.txt
+      - restore_cache:
+          keys: [backend-build]
       - run:
           name: scan Back-end
           command: |
