--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: "update apt packages."
+- name: "update apt packages"
   become: yes
   apt:
     update_cache: yes
@@ -9,10 +9,10 @@
   apt:
     upgrade: yes
 
-# - name: "remove dependencies that are not required"
-#   become: true
-#   apt:
-#     autoremove: yes
+- name: "remove dependencies that are not required"
+  become: true
+  apt:
+    autoremove: yes
 
 - name: "install dependencies."
   become: true
