--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -13,8 +13,8 @@
     - ansible_stdout_callback: yaml
 
   pre_tasks:
-    # - name: "wait 600 seconds for target connection to become reachable/usable."
-    #   wait_for_connection:
+    - name: "wait 600 seconds for target connection to become reachable/usable."
+      wait_for_connection: 600s
     # - name: "install python for Ansible."
     #   become: true
     #   raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
