--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -14,11 +14,14 @@
 
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
-      wait_for_connection: 600s
-    # - name: "install python for Ansible."
-    #   become: true
-    #   raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
-    #   changed_when: false
+      ansible.builtin.wait_for:
+      timeout: 300
+      delegate_to: web
+      
+    - name: "install python for Ansible."
+      become: true
+      raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
+      changed_when: false
     
 
   # Get the environment variables from CircleCI and add to the EC2 instance
