--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -178,9 +178,12 @@ jobs:
       - run:
           name: Install tar utility
           command: |
-            yum install -y tar gzip
-            dnf install zip
-            dnf install unzip
+            apk add --update curl
+            apk add --update tar 
+            apk add --update gzip
+            apk update
+            apk add zip
+            apk add unzip
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
             unzip awscliv2.zip
             which aws
