--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -170,7 +170,7 @@ jobs:
 
   configure-infrastructure:
     docker:
-      - image: python:3.10-alpine3.16
+      - image: geerlingguy/docker-amazonlinux2-ansible
     steps:
       - checkout
       - add_ssh_keys:
@@ -178,11 +178,8 @@ jobs:
       - run:
           name: Install tar utility
           command: |
-            apk add --update curl
-            apk add --update tar 
-            apk add --update gzip
-            apk add zip
-            apk add unzip
+            yum install -y tar gzip unzip zip
+            yum install -y unzip zip
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
             unzip awscliv2.zip
             which aws
