--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -178,13 +178,7 @@ jobs:
       - run:
           name: Install tar utility
           command: |
-            yum install -y tar gzip unzip zip
-            yum install -y unzip zip
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            which aws
-            ls -l /usr/local/bin/aws
-            sudo ./aws/install
+            yum install -y tar gzip 
                 
       - attach_workspace:
           at: ~/project
