--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -14,10 +14,8 @@
 
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
-      ansible.builtin.wait_for:
-      timeout: 300
-      delegate_to: web
-      
+      wait_for_connection:
+
     - name: "install python for Ansible."
       become: true
       raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
