--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -14,12 +14,12 @@
 
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
-       wait_for_connection: 30s
+      ansible.builtin.wait_for_connection: 300s
 
-    - name: "install python for Ansible."
-      become: true
-      raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
-      changed_when: false
+    # - name: "install python for Ansible."
+    #   become: true
+    #   raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
+    #   changed_when: false
      
 
   # Get the environment variables from CircleCI and add to the EC2 instance
