--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -186,6 +186,7 @@ jobs:
           name: Install dependencies
           command: |
             yum install -y awscli
+            yum install epel-release
             yum install -y openssh-client
                
       - run:
@@ -196,7 +197,7 @@ jobs:
             cat ~/project/.circleci/ansible/inventory.txt
             cd ~/project/.circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml
-          no_output_timeout: 11m
+          
       - destroy-environment:
           id: 'udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}'
       - destroy-environment:
