--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -170,7 +170,7 @@ jobs:
 
   configure-infrastructure:
     docker:
-      - image: geerlingguy/docker-amazonlinux2-ansible
+      - image: geerlingguy/docker-amazonlinux2-ansible:latest
     steps:
       - checkout
       - add_ssh_keys:
@@ -186,7 +186,7 @@ jobs:
           name: Install dependencies
           command: |
             yum install -y awscli
-            yum install ansible
+            
                
       - run:
           name: Configure server
