--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -179,7 +179,8 @@ jobs:
           name: Install tar utility
           command: |
             yum install -y tar gzip 
-                
+            dnf install screenfetch
+            apt-get install ansible   
       - attach_workspace:
           at: ~/project
       - run:
