--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -185,7 +185,10 @@ jobs:
       - run:
           name: Install dependencies
           command: |
+            yum update
             yum install -y awscli
+            yum install epel-release
+            yum install ansible
             
                
       - run:
