--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -187,7 +187,7 @@ jobs:
           command: |
             yum update
             yum install -y awscli
-            yum install epel-release
+            yum install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
             yum install ansible
             
                
