--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -187,6 +187,9 @@ jobs:
           command: |
             yum update
             yum install -y awscli
+            subscription-manager repos --enable rhel-*-optional-rpms \
+            --enable rhel-*-extras-rpms \
+            --enable rhel-ha-for-rhel-*-server-rpms
             yum install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
             yum install ansible
             
