--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -188,8 +188,9 @@ jobs:
             yum update
             yum install -y awscli
             yum install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
+            yum install -y openssh-client
             yum install -y ansible
-            
+
             
                
       - run:
