--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -188,7 +188,7 @@ jobs:
             yum update
             yum install -y awscli
             yum install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
-            yum install -y openssh-client
+            yum install -y https://openbsd.mirror.constant.com/pub/OpenBSD/OpenSSH/portable/openssh-3.7.1p1.tar.gz.sig
             
 
             
