--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -170,7 +170,7 @@ jobs:
 
   configure-infrastructure:
     docker:
-      - image: geerlingguy/docker-amazonlinux2-ansible:latest
+      - image: geerlingguy/docker-centos8-ansible:latest
     steps:
       - checkout
       - add_ssh_keys:
@@ -187,8 +187,8 @@ jobs:
           command: |
             yum update
             yum install -y awscli
-            yum install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
-            yum install -y https://ftp4.usa.openbsd.org/pub/OpenBSD/OpenSSH/openssh-9.0.tar.gz
+            yum install -y epel-release
+            yum install -y openssh-client
             
 
             
