--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -170,7 +170,7 @@ jobs:
 
   configure-infrastructure:
     docker:
-      - image: geerlingguy/docker-centos8-ansible:latest
+      - image: robertdebock/docker-centos-openssh
     steps:
       - checkout
       - add_ssh_keys:
@@ -188,7 +188,7 @@ jobs:
             yum update -y
             yum install -y awscli
             yum install -y epel-release
-            yum install -y openssh-client
+            yum install -y ansible
             
 
             
