--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -170,7 +170,7 @@ jobs:
 
   configure-infrastructure:
     docker:
-      - image: robertdebock/docker-centos-openssh
+      - image: centos7
     steps:
       - checkout
       - add_ssh_keys:
@@ -178,6 +178,8 @@ jobs:
       - run:
           name: Install tar utility
           command: |
+            yum update -y
+            yum install -y awscli
             yum install -y tar gzip
             
       - attach_workspace:
