--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -223,7 +223,7 @@ jobs:
       - run:
           name: Send migration status to kvdb.io
           command: |   
-          if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+          if (grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt);
           then
            curl https://kvdb.io/GTEpHpRzixPUfazFwYdWhC/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
           fi
