--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -219,6 +219,7 @@ jobs:
             cd backend
             npm install
             npm run migrations > migrations_dump.txt
+            cat /home/circleci/.npm/_logs/2022-07-11T20_21_58_148Z-debug.log
           
       - run:
           name: Send migration status to kvdb.io
