--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,7 +119,9 @@ jobs:
           command: |
             cd backend
             npm install
-            npm audit fix --audit-level=critical --force
+            npm audit fix --force --audit-level=critical
+            npm audit fix --force --audit-level=critical
+            npm audit --audit-level=critical
   deploy-infrastructure:
     docker:
       - image: amazon/aws-cli
@@ -219,7 +221,6 @@ jobs:
             cd backend
             npm install
             npm run migrations > migrations_dump.txt
-            cat /home/circleci/.npm/_logs/2022-07-11T20_21_58_148Z-debug.log
           
       - run:
           name: Send migration status to kvdb.io
