--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -1,12 +1,12 @@
 ---
 - name: "update apt packages"
-  become: yes
+  become: true
   apt:
     update_cache: yes
     
 
 - name: "upgrade packages"
-  become: yes
+  become: true
   apt:
     upgrade: yes
 
