--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -181,7 +181,7 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: ["1b:80:7c:08:70:d7:13:3e:e5:eb:5b:db:b5:bb:d5:47"]
+          fingerprints: ["d2:60:d7:86:c3:b2:d3:39:6b:2b:2b:1a:d8:84:78:62"]
       - run:
           name: Install awscli tar gzip
           command: |
@@ -278,7 +278,7 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: ["1b:80:7c:08:70:d7:13:3e:e5:eb:5b:db:b5:bb:d5:47"]
+          fingerprints: ["d2:60:d7:86:c3:b2:d3:39:6b:2b:2b:1a:d8:84:78:62"]
       - attach_workspace:
           at: ~/project
       - run:
